--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section class="hero">
       <div class="hero-content">
-        <img src="hero.jpg" alt="hero-img" />
+        <img src="123.jpg" alt="hero-img" />
         <img src="avatar.jpg" alt="ms.Dung" class="avatar" />
         <h1>Học văn cùng Ms.Dung</h1>
         <p>Đây sẽ là phần giới thiệu về cô Nguyễn Thị Kim Dung</p>
